--- a/packages/docs/src/components/Header/Header.astro
+++ b/packages/docs/src/components/Header/Header.astro
@@ -1,14 +1,14 @@
 ---
-import { getLanguageFromURL, KNOWN_LANGUAGE_CODES } from '../../languages';
-import * as CONFIG from '../../config';
-import AstroLogo from './AstroLogo.astro';
-import SkipToContent from './SkipToContent.astro';
-import SidebarToggle from './SidebarToggle';
-import LanguageSelect from './LanguageSelect';
-import Search from './Search';
+import { getLanguageFromURL, KNOWN_LANGUAGE_CODES } from '../../languages'
+import * as CONFIG from '../../config'
+import AstroLogo from './AstroLogo.astro'
+import SkipToContent from './SkipToContent.astro'
+import SidebarToggle from './SidebarToggle'
+import LanguageSelect from './LanguageSelect'
+import Search from './Search'
 
-const { currentPage } = Astro.props;
-const lang = currentPage && getLanguageFromURL(currentPage);
+const { currentPage } = Astro.props
+const lang = currentPage && getLanguageFromURL(currentPage)
 ---
 
 <header>
@@ -18,17 +18,19 @@ const lang = currentPage && getLanguageFromURL(currentPage);
 			<SidebarToggle client:idle />
 		</div>
 		<div class="logo flex">
-			<a href="/">
+			<a href="/svelte-headlessui/">
 				<AstroLogo size={40} />
 			</a>
 		</div>
 		<div style="flex-grow: 1;"></div>
 		{KNOWN_LANGUAGE_CODES.length > 1 && <LanguageSelect lang={lang} client:idle />}
-		{CONFIG.ALGOLIA && (
-			<div class="search-item">
-				<Search client:idle />
-			</div>
-		)}
+		{
+			CONFIG.ALGOLIA && (
+				<div class="search-item">
+					<Search client:idle />
+				</div>
+			)
+		}
 	</nav>
 </header>
 
