--- a/packages/docs/src/layouts/ExampleLayout.astro
+++ b/packages/docs/src/layouts/ExampleLayout.astro
@@ -2,7 +2,7 @@
 ---
 
 <html class="bg-transparent">
-  <body class="bg-transparent">
-    <slot></slot>
-  </body>
+	<body class="bg-transparent">
+		<slot />
+	</body>
 </html>
