fix favicon link

--- a/packages/docs/src/components/HeadCommon.astro
+++ b/packages/docs/src/components/HeadCommon.astro
@@ -8,9 +8,7 @@ import '../styles/index.css'
 <meta name="viewport" content="width=device-width" />
 <meta name="generator" content={Astro.generator} />
 
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-
-<link rel="sitemap" href="/sitemap.xml" />
+<link rel="icon" type="image/svg+xml" href="/svelte-headlessui/favicon.svg" />
 
 <!-- Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
