--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,7 @@
 @plugin "@tailwindcss/forms";
 @plugin "@tailwindcss/typography";
 
+@source '../src/docs/**/*.{html,js,svelte,ts,md}';
 @source '../node_modules/svelte-doc-kit/dist/**/*.{html,js,svelte,ts,md}';
 
 @custom-variant dark (&:is(.dark *));
